--- a/src/App.css
+++ b/src/App.css
@@ -55,12 +55,12 @@ li a:hover {
   transform: scale(1.1);
 }
 .btn-1 {
-  padding: 5px 20px;
+ padding: 10px;
   font-size: 15px;
   background: rgb(115, 167, 212);
   color: #fff;
   border-color: #fff;
-  border-radius: 5px;
+  border-radius: 2px;
   border: none;
   transition: background-color 0.3s, transform 0.3s;
 }
@@ -108,6 +108,12 @@ li a:hover {
   justify-content: space-between;
   align-items: center;
 }
+.color{
+  color: rgb(6, 6, 63);
+}
+.font{
+  font-family: 'Oswald' , sans-serif;
+}
 .section {
   font-size: 20px;
 }
@@ -120,7 +126,7 @@ li a:hover {
   padding: 15px 0px 0px 0px;
 }
 .btns {
-  padding: 15px 10px 0px 10px;
+  padding-top: 15px;
 }
 .button-2 {
   margin-left: 20px;
@@ -131,15 +137,22 @@ li a:hover {
   border-color: #fff;
   border-radius: 5px;
   border: none;
+
 }
 .button-1 {
-  padding: 15px 25px 15px 25px;
+  padding: 10px;
   font-size: 15px;
   background: rgb(115, 167, 212);
   color: #fff;
   border-color: #fff;
-  border-radius: 5px;
+  border-radius: 2px;
   border: none;
+  cursor: pointer;
+  width: 150px;
+}
+.button-1:hover{
+  background-color: rgb(16, 24, 49);
+  transition: 0.6s ease-in-out;
 }
 .hero-image {
   padding: 0px 30px 0px 0px;
@@ -178,6 +191,10 @@ li a:hover {
   border-radius: 10px;
   transition:  tranform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   text-align: center;
+  cursor: pointer;
+}
+.services-title-name{
+  padding: 10px;
 }
 .services-item-list:hover {
   transform: scale(1.1);
@@ -192,7 +209,7 @@ li a:hover {
 .container-1 {
   text-align: center;
   background-color: rgb(82, 82, 235);
-  border-radius: 10px;
+  border-radius: 5px;
   width: 75%;
   padding: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -201,11 +218,12 @@ li a:hover {
 .container-a {
   margin-bottom: 10px;
   background: rgb(82, 82, 235);
+  color: rgb(221, 186, 186);
 }
 .container-p {
   font-size: 24px;
   font-weight: bold;
-color: #fff;
+  color: #fff;
   background: rgb(82, 82, 235);
 }
 .container-a {
@@ -222,84 +240,118 @@ color: #fff;
   margin-right: 10px;
   width: 100px;
 }
-.btn-2{
-  padding: 10px 10px 10px 10px;
-  border: none;
-  font-weight: 200;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 2px;
-  transition: background-color 0.3s ease;
-}
+
 .btn-2:hover{
   background-color: #191133;
 }
 .img-width-size{
-  width: 200px;
+ width: 50%;
 }
 /* Member section style */
-.our-members{
-  text-align: center;
-}
-.our-members-titles{
-  color: #2f424e; 
-  text-align: underline;
-}
-.our-member-list{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border: 1px solid  black;
-  margin-top: 20px;
-}
-.div-1{
-  padding: 50px 50px 50px 50px;
-  border: 1px solid black;
-}
-.our-members-container{
-  margin-top: 20px;
-}
-.img-size-icreases{
-  width: 150px;
-  height: 150px;
-}
-/* .services-image-bigadna{
-
-} */
 
 /*  footer section design template here */
-.footer-container{
-  border: 1px solid black;
-  margin: 10px 0px 10px 0px ;
-  background-color: #724d4d;
-  border-radius: 5px ;
+.footer {
+  width: 100%;
+ padding: 100px 0px 0px 0px;
+ 
 }
-/* .footer-container-1{
+.footer-logo{
+  width: 50%;
+  padding: 10px 0px;
+}
+.some-content {
+  padding-top: 20px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+}
+.footer-flex {
+display: grid;
+grid-template-columns: repeat(4, 1fr);
+gap: 100px;
+padding-top: 20px;
+border-top:  1px solid  #ee6464;
+}
 
-} */
-.footer-list-item-value{
- display: flex;
- align-items: center;
- padding: 10px 10px 10px 10px;
- justify-content: space-between;
+.footer-container-1 {
+  width: 100%
 }
-.image-size-badao{
-  width: 100px;
+
+.some-content {
+  padding-top: 20px;
+  cursor: pointer;
 }
-.color-item{
-  background-color: #724d4d;
+
+.footer-services {
+  padding-top: 10px;
+  font-size: 15px;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+.footer-container-3 {
+  border: 1px solid #b3b1b1;
+  margin-top: 20px;
+  padding: 20px 0px;
+  background-color: #26194a;
+}
+
+.footer-contact {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+  padding-top: 10px;
+}
+
+.whatsapp-icon {
+  width: 15px;
+}
+
+.icons-contact {
+  font-size: 18px;
+}
+
+.footer-social-icon {
+  width: 30px;
+  cursor: pointer;
+}
+
+.footer-social-icon:hover {
+  opacity: 0.6;
+  background-color: aliceblue;
+}
+.para2 {
+  font-size: 14px;
+}
+.para3 {
+  padding: 10px 0px 10px 0px;
   font-size: 16px;
+  font-weight: 600;
+  font-family: 'Oswald', sans-serif;
+}
+.copyright {
   text-align: center;
 }
-/*  home list item are design here */
-
-.unordered-list{
-  text-decoration: none;
+/* pages css */
+/* Contact page css */
+.contact-heading{
+ text-align: center;
+ padding-top: 150px;
 }
-/*  list item services are design */
- li{
-  list-style: none;
-  font-size: 15px;
-  line-height: 1.5rem;
-  font-weight: 200;
-  }
+.para4{
+  padding-top: 20px;
+  font-size: 16px;
+  font-family: 'Oswald', sans-serif;
+  color: #868383;
+}
+.contact-form{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ padding-top: 20px;
+}
+
+
+
