--- a/src/App.css
+++ b/src/App.css
@@ -325,6 +325,7 @@ border-top:  1px solid  #ee6464;
 .para2 {
   font-size: 14px;
 }
+
 .para3 {
   padding: 10px 0px 10px 0px;
   font-size: 16px;
@@ -347,11 +348,31 @@ border-top:  1px solid  #ee6464;
   color: #868383;
 }
 .contact-form{
- display: flex;
- align-items: center;
- justify-content: center;
- padding-top: 20px;
+ padding: 20px ;
+ margin-top: 50px;
+ border: 1px solid #b3b1b1;
+ border-radius: 2px;
+ width: 50%;
 }
+.form-input{
+  display: flex;
+  flex-direction: column;
+   width: 100%;
+}
+.input-width{
+ margin-top: 10px;
+ padding: 10px;
+ width: 100%;
+}
+.input-title{
+  margin-top: 10px;
+}
+.input-message{
+  margin-top: 10px;
+  width: 100%;
+  padding: 10px;
+}
+
 
 
 
