--- a/src/App.css
+++ b/src/App.css
@@ -356,7 +356,6 @@ border-top:  1px solid  #ee6464;
   padding: 20px 0px;
   background-color: #26194a;
 }
-
 .footer-contact {
   display: flex;
   align-items: center;
@@ -364,20 +363,16 @@ border-top:  1px solid  #ee6464;
   gap: 10px;
   padding-top: 10px;
 }
-
 .whatsapp-icon {
   width: 15px;
 }
-
 .icons-contact {
   font-size: 18px;
 }
-
 .footer-social-icon {
   width: 30px;
   cursor: pointer;
 }
-
 .footer-social-icon:hover {
   opacity: 0.6;
   background-color: aliceblue;
@@ -409,6 +404,7 @@ border-top:  1px solid  #ee6464;
 .contact-form{
 padding: 30px 500px;
 }
+
 .contact-form-border{
   padding: 25px;
   background-color: #191133;
@@ -458,7 +454,44 @@ padding: 30px 500px;
   align-items: center;
   justify-content: space-between;
 }
+.about-page{
+  padding: 60px 100px;
+}
+.project-completion{
+  border: 1px solid #b3b1b1;
+  width: 100%;
+  height: 250px;
+  padding: 80px 60px;
+  border-radius: 2px;
+  background-color: #191133;
+}
+.project-completion-item{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #191133;
+}
 
+.project-item-list{
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  border: 1px solid #b3b1b1;
+  padding: 20px 10px;
+  border-radius: 2px;
+  background: rgb(236, 236, 236);
 
+}
+.icon-size{
+  font-size: 65px;
+  background: rgb(236, 236, 236);
+}
+.project-content{
+  background: rgb(236, 236, 236);
+}
+.color-1{
+  color: #eb0c0c;
+  font-weight: 600;
+}
 
-
+ 
