--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@ li a:hover {
   border-radius: 2px;
   border: none;
   transition: background-color 0.3s, transform 0.3s;
+  cursor: pointer
 }
 .btn-1:hover {
   background-color: rgb(95, 147, 192);
@@ -103,6 +104,12 @@ li a:hover {
   animation: fadeIn 2s ease-out forwards;
 }
 /* Existing styles */
+.hero-flex{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
 .hero-section {
   padding: 150px 0px 0px 0px;
   display: flex;
@@ -404,7 +411,6 @@ border-top:  1px solid  #ee6464;
 .contact-form{
 padding: 30px 500px;
 }
-
 .contact-form-border{
   padding: 25px;
   background-color: #191133;
@@ -455,7 +461,7 @@ padding: 30px 500px;
   justify-content: space-between;
 }
 .about-page{
-  padding: 60px 100px;
+  padding: 30px 50px;
 }
 .project-completion{
   border: 1px solid #b3b1b1;
@@ -471,7 +477,6 @@ padding: 30px 500px;
   justify-content: space-between;
   background-color: #191133;
 }
-
 .project-item-list{
   display: flex;
   gap: 30px;
@@ -480,7 +485,6 @@ padding: 30px 500px;
   padding: 20px 10px;
   border-radius: 2px;
   background: rgb(236, 236, 236);
-
 }
 .icon-size{
   font-size: 65px;
@@ -493,5 +497,29 @@ padding: 30px 500px;
   color: #eb0c0c;
   font-weight: 600;
 }
+.team-img{
+  display: flex;
+  justify-content: space-between;
+  gap:  20px;
+  margin-top: 20px;
+}
+
+.team{
+  width: 100%;
+  height: 300px;
+  border-radius: 2px;
+  cursor: pointer;
+}
+.team-member{
+  padding-top:  50px;
+  text-align: center;
+}
+.content-container-1{
+ border: 1px solid #b3b1b1; 
+  width: 100%;
+}
+
+
+
 
  
