--- a/src/App.css
+++ b/src/App.css
@@ -264,19 +264,32 @@ li a:hover {
 .experience-field{
   width: 100%;
 }
-
-
 .fill-border{
-  border-radius: 3px;
-  background: rgb(115, 167, 212);
-  padding: 5px;
+  height: 100%;              
+  background-color: rgb(115, 167, 212); 
+  transition: width 0.5s ease; 
+  border-radius: 5px;  
 }
 .progress-bar{
   display: flex;
   align-items: center;
   justify-content: start;
   gap: 10px;
+  width: 100%;               
+  height: 30px;              
+  background-color: #e0e0e0; 
+
+  border-radius: 5px;        
+  overflow: hidden;          
 }
+.progress-text{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #fff;
+   font-weight: 600;
+}
+
 .it-services{
   display: flex;
   align-items: center;
@@ -323,8 +336,6 @@ li a:hover {
   width: 100%;
  padding: 100px 0px 0px 0px;
 }
-
-
 .footer-logo{
   width: 50%;
   padding: 10px 0px;
@@ -365,6 +376,7 @@ border-top:  1px solid  #ee6464;
   background-color: #26194a;
 }
 .footer-contact {
+  
   display: flex;
   align-items: center;
   justify-content: start;
