--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
 .page{
  padding:  0px 40px 0px 40px;
 }
-/* Navbar slide-in animation */
 @keyframes slideIn {
   from {
     transform: translateY(-100%);
@@ -19,26 +18,30 @@
     opacity: 1;
   }
 }
-
 .header {
   animation: slideIn 1s ease-out;
   padding: 20px 0px 0px 0px;
-
+}
+.mt{
+  margin-top: 10px;
+}
+.mt-2{
+   margin-top: 20px;
 }
 .logo-name {
-  width: 20%;
+width: 150px;
+}
+.hamburger{
+  font-size: 30px;
 }
 .navbar {
   display: flex;
   justify-content: space-between;
   align-self: center;
-
 }
 .nav-links {
   display: flex;
   list-style-type: none; 
-  margin: 0;
-  padding: 0;
 }
 li {
   margin-left: 1.5rem;
@@ -50,10 +53,10 @@ li a {
   font-weight: 600;
   transition: color 0.3s, transform 0.3s;
 }
-/* Hover effect for nav links */
 li a:hover {
   color: rgb(115, 167, 212);
   transform: scale(1.1);
+
 }
 .btn-1 {
  padding: 10px;
@@ -65,7 +68,6 @@ li a:hover {
   border: none;
   transition: background-color 0.3s, transform 0.3s;
   cursor: pointer;
-
 }
 .btn-1:hover {
   background-color: rgb(95, 147, 192);
@@ -74,8 +76,6 @@ li a:hover {
 .btn-li {
   margin-top: -5px;
 }
-/* hero section design */
-/* Keyframes for text animations */
 @keyframes fadeInUp {
   0% {
     opacity: 0;
@@ -94,7 +94,6 @@ li a:hover {
     opacity: 1;
   }
 }
-/* Apply animations to text elements */
 .section h1 {
   animation: fadeInUp 1s ease-out forwards;
 }
@@ -109,7 +108,6 @@ li a:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
 }
 .hero-section {
   padding: 150px 0px 0px 0px;
@@ -120,7 +118,6 @@ li a:hover {
 .some-about-content{
   width: 50%;
 }
-
 .secure-it{
   color: rgb(115, 167, 212);
   font-weight: 600;
@@ -163,7 +160,6 @@ li a:hover {
   border-color: #fff;
   border-radius: 5px;
   border: none;
-
 }
 .button-1 {
   padding: 10px;
@@ -201,6 +197,7 @@ li a:hover {
   color: gray;
   font-size: 15px;
   line-height: 1.5rem;
+  text-align: justify;
 }
 .quote-2{
   color: gray;
@@ -255,9 +252,7 @@ li a:hover {
 .img-width-size{
  width: 50%;
 }
-
 /* It experience section */
-
 .topex-2{
   margin-top: 70px;
 }
@@ -278,7 +273,6 @@ li a:hover {
   width: 100%;               
   height: 30px;              
   background-color: #e0e0e0; 
-
   border-radius: 5px;        
   overflow: hidden;          
 }
@@ -312,18 +306,19 @@ li a:hover {
   width:100%;
   cursor: pointer;
 }
+
 .services-img-add:hover{
    transition: 0.6s ease-in-out;
    zoom: 100%;
    transform: scale(1.2);
 }
-
 .img-aspect-1{
   border-radius: 2px;
   cursor: pointer;
   border: 1px solid rebeccapurple;
-  height: 150px;
+  height: 100px;
   background-color: black;
+  text-align: center;
 }
 .p-bg{
   background-color: #191133;
@@ -353,7 +348,6 @@ gap: 100px;
 padding-top: 20px;
 border-top:  1px solid  #ee6464;
 }
-
 .footer-container-1 {
   width: 100%
 } 
@@ -368,7 +362,6 @@ border-top:  1px solid  #ee6464;
   color: black;
   cursor: pointer;
 }
-
 .footer-container-3 {
   border: 1px solid #b3b1b1;
   margin-top: 20px;
@@ -376,7 +369,6 @@ border-top:  1px solid  #ee6464;
   background-color: #26194a;
 }
 .footer-contact {
-  
   display: flex;
   align-items: center;
   justify-content: start;
@@ -445,7 +437,6 @@ padding: 30px 500px;
  outline: none;
  border-radius: 2px;
 }
-
 .input-title{
   margin-top: 10px;
   background-color: #191133;
@@ -472,13 +463,15 @@ padding: 30px 500px;
   align-items: center;
   justify-content: space-between;
 }
+.about-image{
+  width: 60%;
+}
 .about-page{
-  padding: 30px 50px;
+  padding: 0px 50px;
 }
 .project-completion{
   border: 1px solid #b3b1b1;
   width: 100%;
-  height: 250px;
   padding: 40px 60px;
   border-radius: 2px;
   background-color: #191133;
@@ -505,31 +498,116 @@ padding: 30px 500px;
 .project-content{
   background: rgb(236, 236, 236);
 }
-.color-1{
+.color-1{ 
   color: #eb0c0c;
   font-weight: 600;
 }
-.team-img{
-  display: flex;
-  justify-content: space-between;
-  gap:  20px;
-  margin-top: 20px;
-}
-.team{
-  width: 100%;
-  height: 300px;
-  border-radius: 2px;
-  cursor: pointer;
-}
-.team-member{
-  padding-top:  60px;
-  text-align: center;
+.grid-template-hel{
+  display: grid;
+  grid-template-columns: repeat( 4, 1fr);
+  gap: 30px;
 }
 .content-container-1{
  border: 1px solid #b3b1b1; 
   width: 100%;
 }
+.service-container{
+  display: flex;
+  justify-content: start;
+  gap: 150px;
+}
+.support-icon{
+  font-size: 150px;
+}
+.support-center{
+  text-align: center;
+}
+.support-item{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.service-image-1{
+  width: 100%;
+}
+.service-border-1{
+  border: 1px solid black;
+  width: 100%;
+}
+.services-container-1{
+  border-radius: 2px;
+  padding: 20px 20px 10px 20px;
+  background-color: #cfcaca;
+  width: 100%;
+}
+.service-container-2{
+  width: 100%;
+  border: 1px solid #cfcaca;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.service-container-2:hover{
+  background-color: rgb(115, 167, 212);
+  transition: 0.6s ease-in-out;
+}
+.forward-icon{
+  font-size: 30px;
+  background: none;
+}
+.service-title{
+  background: none;
+  font-weight: 200;
+  font-family: 'oswald', sans-serif;
+}
+.font-size-1{
+  font-family: 'oswald', sans-serif;
+  line-height: 1.5rem;
+  word-spacing: 0.2rem;
+  text-align: justify;
+}
+.border-6{
+  border: 1px solid black;
+}
+.background-Remover{
+   background: none;
+}
+.flex-row-col{
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+   background-color: #cfcaca;
+}
+@media(max-width: 550px){
+  .page{
+    padding: 0px  10px;
+  }
+  .logo-name{
+    display: none;
+  }
+  .navbar{
+    display: block;
 
+  }
+  .nav-item{
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+  }
+  .nav-links{
+    display: inline-block;
+  }
+  .lnk-size{
+    margin-top: 10px;
+    margin-left: 0px;
+  }
+  .hero-section{
+    padding-top: 10px;
+  }   
+}
 
 
 
