--- a/src/App.css
+++ b/src/App.css
@@ -403,60 +403,47 @@ border-top:  1px solid  #ee6464;
 }
 /* pages css */
 /* Contact page css */
-.contact-heading{
- text-align: center;
- padding-top: 100px;
+
+.contact-us-title{
+  text-align: center;
+  font-size: 30px;
+  font-weight: 600;
+  font-family: var(--font);
+}                                 
+.para-4{
+  font-size: 25px;
+  font-weight: 600;
+  font-family: var(--font);
 }
-.para4{
-  padding-top: 20px;
-  font-size: 16px;
-  font-family: 'Oswald', sans-serif;
-  color: #868383;
-}
-.contact-form{
-padding: 30px 500px;
-}
-.contact-form-border{
-  padding: 25px;
-  background-color: #191133;
-  border-radius: 2px;  
-}
-.form-input{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  background-color: #191133;
+.message-box-text{
+  width: 800px;
+  height: 250px;
+  padding: 10px;
 }
 .input-width{
- margin-top: 10px;
- padding: 10px;
- width: 100%;
- background: rgb(115, 167, 212);
- border-color: #fff;
- border: none;
- outline: none;
- border-radius: 2px;
-}
-.input-title{
-  margin-top: 10px;
-  background-color: #191133;
-  color: #fff;
-}
-.input-message{
-  margin-top: 10px;
-  width: 100%;
   padding: 10px;
-  background: rgb(115, 167, 212);
-  border: none;
-  outline: none;
+  width: 100%;
   border-radius: 2px;
 }
-.button-3{
-  background-color: #fff;
-  color: black;
+.footer-flex-4{
+  display: flex;
+  justify-content:  start;
+  gap: 100px;
 }
+.btn-color-gr{
+  background-color: #07763c;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 15px;
+}
+.btn-color-gr:hover{
+  background-color: #000;
+  transition: 0.6s ease-in-out;
+}
+
 .about-banner-img{
-  width: 100%
+  width: 100%;
 }
 .about-section{
   display: flex;
@@ -594,7 +581,6 @@ padding: 30px 500px;
   margin-top: -50px;
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
- 
 }
 .rating{
   display: flex;
