--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
  font-family: Arial, Helvetica, sans-serif, ;
 }
 
-
 .page{
  padding:  0px 40px 0px 40px;
 }
@@ -267,14 +266,17 @@ li a:hover {
   transition: width 0.5s ease; 
   border-radius: 5px;  
 }
+.para-1{
+  font-size: 15px;
+  background: none;
+}
 .progress-bar{
   display: flex;
   align-items: center;
   justify-content: start;
   gap: 10px;
-  width: 100%;               
-  height: 30px;              
-  background-color: #e0e0e0; 
+  height: 15px;
+  width: 100%;
   border-radius: 5px;        
   overflow: hidden;          
 }
@@ -403,7 +405,6 @@ border-top:  1px solid  #ee6464;
 }
 /* pages css */
 /* Contact page css */
-
 .contact-us-title{
   text-align: center;
   font-size: 30px;
@@ -424,6 +425,12 @@ border-top:  1px solid  #ee6464;
   padding: 10px;
   width: 100%;
   border-radius: 2px;
+}
+.footer-flex-3{
+  display: flex;
+  align-items: center;
+  justify-items: start;
+  gap: 10px;
 }
 .footer-flex-4{
   display: flex;
@@ -603,12 +610,11 @@ border-top:  1px solid  #ee6464;
    .popup{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+    background: #fcfcfc;
       display: flex;
     align-items: center;
     justify-content: center;
    }
-
   .radio-flex{
     display: flex;
     align-items: center;
