--- a/src/App.css
+++ b/src/App.css
@@ -48,14 +48,15 @@ cursor: pointer;
 li {
   margin-left: 1.5rem;
 }
-li a {
+li div {
   text-decoration: none;
   font-size: 17px;
   color: rgb(11, 3, 31);
   font-weight: 600;
   transition: color 0.3s, transform 0.3s;
+  cursor: pointer;
 }
-li a:hover {
+li div:hover {
   color: rgb(115, 167, 212);
   transform: scale(1.1);
 }
