--- a/src/App.css
+++ b/src/App.css
@@ -729,6 +729,36 @@ border-top:  1px solid  #ee6464;
     font-size: 15px;
     font-family: 'oswald', sans-serif;
   }
+  /* blog detail */
+
+  .blog-detail-flex{
+    display: flex;
+    justify-content: start;
+    gap: 20px;
+   }
+   .blog-detail-width{
+    width: 75%;
+   }
+   .blog-title{
+    font-size: 30px ;
+    font-weight: 600;
+    font-family: 'oswald', 'Times New Roman', Times, serif;
+   }
+   .blog-img-width{
+    width: 100%;
+    height: 600px;
+   }
+   .blog-detail-width-1{
+
+    width: 25%;
+  
+   }
+   .blog-detail-grid{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  
+   }
   /*  add css module */
   .radio-size{
   font-size: 25px;
@@ -929,6 +959,26 @@ border-top:  1px solid  #ee6464;
  }
  .border-1{
   margin-top: 60px;
+ }
+ /* blog detail */
+ .blog-detail-flex{
+  display:block;
+ 
+ }
+ .blog-detail-width{
+  width: 100%;
+ }
+ .blog-title{
+  font-size: 22px ;
+ }
+ .blog-img-width{
+  width: 100%;
+  height: 250px;
+ }
+ .blog-detail-width-1{
+  margin-top: 10px;
+  width: 100%;
+
  }
 }
 
