--- a/src/App.css
+++ b/src/App.css
@@ -342,6 +342,7 @@ li div:hover {
   border-radius: 2px;
   width:100%;
   cursor: pointer;
+   height: 180px;
 }
 .services-img-add:hover{
    transition: 0.6s ease-in-out;
