--- a/src/App.css
+++ b/src/App.css
@@ -571,9 +571,9 @@ border-top:  1px solid  #ee6464;
   background-color: #191133;
 }
 .project-completion-item{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
   background-color: #191133;
 }
 .project-item-list{
@@ -879,7 +879,7 @@ border-top:  1px solid  #ee6464;
     display: block;
   }
   .footer-flex{
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
   .quote{
     width: 100%;
@@ -890,9 +890,9 @@ border-top:  1px solid  #ee6464;
   .topex-2{
     margin-top: 15px;
   }
-  /* .copyright{
+  .copyright{
     text-align: justify;
-  } */
+  }
   .hero-font{
     font-size: 20px;
   }
@@ -913,167 +913,12 @@ border-top:  1px solid  #ee6464;
   object-fit: cover;
  }
  .project-completion-item{
-  display: block;
+   grid-template-columns: repeat(1, 1fr);
+   
  }
-
-
- .about-page{
-  padding: 10px;
- }
- .grid-template-hel{
-  display: grid;
-  grid-template-columns: repeat( 2, 1fr);
-  gap: 30px;
-  margin-top: 15px;
-}
-.service-container{
-  display: block;
-}
-.services-container-1{
-  margin-top: 15px;
-}
-.testimonial{
-  display: block;
-}
-.footer-flex-4{
-  display: block;
-}
-.message-box-text{
-  width: 100%;
-}
-.para1{
-  text-align: justify;
-}
-.header{
-  padding: 0;
-}
-.skillName{
-  grid-template-columns: repeat(2, 1fr);
-}
-.popup{
-  padding: 10px;
-}
-.border-1{
-  width: 100%;
-}
- .project-completion{
+ .project-item-list{
   padding: 20px;
  }
- .border-1{
-  margin-top: 60px;
- }
- /* blog detail */
- .blog-detail-flex{
-  display:block;
- 
- }
- .blog-detail-width{
-  width: 100%;
- }
- .blog-title{
-  font-size: 22px ;
- }
- .blog-img-width{
-  width: 100%;
-  height: 250px;
- }
- .blog-detail-width-1{
-  margin-top: 10px;
-  width: 100%;
-
- }
-}
-
-@media(max-width: 768px){
-  .page{
-    padding: 10px;
-  }
-  .blog-grid{
-
-    grid-template-columns: repeat(1, 1fr);
- 
-   }
-  
-
- 
-  
-
-  /* Initial hidden state */
-  
-  /* hero section */
- .hero-section-item{
-  text-align: center;
- }
- .hero-flex{
-  text-align: center;
- }
- 
-  .hero-section{
-    display: block;
-    padding-top: 30px;
-    text-align: justify;
-  }
-  .hero-image{
-    display: none;
- 
- 
-  }
-  .center-item{
- text-align: center;
-  }
-  .btns {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .some-about-content{
-    text-align: center;
-    width: 100%;
-  }
-  .hero-flex{
-    display: block;
-  }
-  .footer-flex{
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .quote{
-    width: 100%;
-  }
-  .button-1{
-    width: 50%;
-  }
-  .topex-2{
-    margin-top: 15px;
-  }
-  /* .copyright{
-    text-align: justify;
-  } */
-  .hero-font{
-    font-size: 20px;
-  }
- .it-services{
-  display: block;
- }
- .it-services-flex{
-  display: block;
- }
- .img-width{
-  width: 70%;
- }
- .about-section{
-  display: block;
- }
- .about-image{
-  width: 100%;
-  object-fit: cover;
- }
-
- .project-completion-item{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-  padding: 0px;
- }
 
 
  .about-page{
@@ -1081,7 +926,7 @@ border-top:  1px solid  #ee6464;
  }
  .grid-template-hel{
   display: grid;
-  grid-template-columns: repeat( 2, 1fr);
+  grid-template-columns: repeat( 1, 1fr);
   gap: 30px;
   margin-top: 15px;
 }
@@ -1115,9 +960,7 @@ border-top:  1px solid  #ee6464;
 .border-1{
   width: 100%;
 }
- .project-completion{
-  padding: 5px;
- }
+
  .border-1{
   margin-top: 60px;
  }
@@ -1142,10 +985,5 @@ border-top:  1px solid  #ee6464;
 
  }
 }
-@media(max-width: 1024px){
-   .project-completion-item{
- gap: 10px;
 
- }
-}
 
